# do-an-tot-nghiep

./: .gitignore  AGENTS.md  inject.py  orig_lines.txt  requirements.docx
backend/: .env  .env.example  ADMIN_AUTH_NOTES.md  CATEGORY_MANAGEMENT_NOTES.md  CONTENT_VIDEO_MANAGEMENT_NOTES.md  CUSTOMER_PERMISSION_MANAGEMENT_NOTES.md  INVENTORY_MANAGEMENT_NOTES.md  ORDER_MANAGEMENT_NOTES.md  POLICY_MANAGEMENT_NOTES.md  PRODUCT_MANAGEMENT_NOTES.md  REVIEW_MANAGEMENT_NOTES.md  VOUCHER_MANAGEMENT_NOTES.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: dependencies.py
backend/app/application/ai/: schemas.py  search_intent.py  use_cases.py
backend/app/application/brands/: import_jobs.py
backend/app/application/commerce/: integrations.py  schemas.py  use_cases.py
backend/app/application/loyalty/: schemas.py  use_cases.py
backend/app/application/users/: schemas.py  use_cases.py
backend/app/infrastructure/: cache.py
backend/app/shared/: exceptions.py  reviews.py
backend/app/workers/: brand_import_worker.py
backend/electronics_commerce_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: 036_inventory_policy_and_receipt_metadata.sql  036_inventory_settings_and_receipt_metadata.sql  037_inventory_enterprise_foundation.sql  038_review_management_upgrade.sql  039_review_resilience_and_user_controls.sql  040_catalog_inventory_services_foundation.sql  040_policy_management_upgrade.sql  init_database.sql
backend/scripts/: inspect_db.py  run_migrations.py  seed_attached_services.py  seed_demo_videos.py
frontend/: README.md  (+4 more)
(+91 files in other folders)
