[project]
name = "electronics-commerce-api"
version = "0.1.0"
description = "FastAPI backend for electronics ecommerce platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "pyotp>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
